Add feature quote
Co-authored-by: Genbu Hase <hasegenbu@gmail.com>
Co-authored-by: wakin <8th.mail@gmail.com>

[New] Implement a feature of quote (by Genbu Hase)

remake quote feature (by wakin)

Fix quote nesting at once, add quote_id
Fix boost target to be quoted if boosted
Add feature_quote to instance API
Add confirmation of overwriting of input content when quoting
Fix to reject status quotations other than public and unlisted
Add index to statuses quote_id
Change not to delete the element specified in invisible
Compatible with Misskey quote
Apply quote by parsing post body
Add "Show poll" link to quoted poll
Fix an avatar icon size of the status quoted on the public page
Fix tooltip 'cannot be quoted'
Fix quoted audio
Fix PictureInPicture to work in quotes
Fix to hide mute and blocked quotes
Add quote button in PiP
Fix Open handler in quote media
fix rtl in quote_indicator
Fix expand video on public page for quote
Fix modal footer to react to quoted posts
Fix missing reblog_of_quote
Fix missing frameRate
Fix not hiding quoted unlisted status in non public timeline
Fix quote on public stream
Fix to dismiss quote where the target post was deleted
Remove unneeded code from quote
Add noopener and noreferrer to quote remote links
Fix quote to be compatible for Mastodon v3.5
Change NoteObject's quoteURL to quoteUri and introduced fedibird namespace in @context
Add a quote URL to the search target string
Add show quote button setting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -38,6 +38,7 @@ defaults: &defaults
   trends_as_landing_page: true
   trendable_by_default: false
   crop_images: true
+  show_quote_button: true
   notification_emails:
     follow: true
     reblog: false
